--- a/traefik-deployment.yml
+++ b/traefik-deployment.yml
@@ -33,6 +33,7 @@ spec:
           containerPort: 80
         - name: admin
           containerPort: 8080
+          NodePort: 8080
         args:
         - --api
         - --kubernetes
